Fix buttons and progress bars on mobile

--- a/src/styles/Automation.scss
+++ b/src/styles/Automation.scss
@@ -7,6 +7,8 @@
     justify-content: left;
     text-align: left;
 
+    padding: 0.25em 0.5em;
+
     .primary {
       color: Theme.color(positive, 30%);
       background: Theme.color(positive, 15%);
@@ -15,6 +17,11 @@
     .secondary {
       color: Theme.color(neutral, 30%);
       background: Theme.color(neutral, 15%);
+    }
+
+    .disabled {
+      color: Theme.color(negative, 30%);
+      background: Theme.color(negative, 15%);
     }
   }
 }
